--- a/package.json
+++ b/package.json
@@ -11,26 +11,24 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^7.6.2",
-    "@react-navigation/bottom-tabs": "^6.5.11",
-    "@react-navigation/material-bottom-tabs": "^6.2.19",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/native-stack": "^6.9.17",
-    "@react-navigation/stack": "^6.3.21",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
     "babel-eslint": "^10.1.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-camera": "3.44.3",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-linking": "^0.0.0",
-    "react-native-paper": "^5.11.4",
+    "react-native-paper": "^5.12.3",
     "react-native-push-notification": "^8.1.1",
-    "react-native-safe-area-context": "^4.8.1",
+    "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^3.29.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^10.0.3",
     "save-dev": "^0.0.1-security"
   },
@@ -39,7 +37,6 @@
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native/babel-preset": "^0.73.18",
-    "@react-native/eslint-config": "^0.73.1",
     "@react-native/metro-config": "^0.73.2",
     "@react-native/typescript-config": "^0.73.1",
     "@types/react": "^18.2.6",
@@ -49,8 +46,6 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.34.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.6.3",
     "prettier": "^3.2.5",
     "react-test-renderer": "18.2.0",
